--- a/Non-Diabetic1/html/ar/4.html
+++ b/Non-Diabetic1/html/ar/4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,62 +15,96 @@
 </head>
     <body class="bg-light" style="text-align: right; font-family: 'Times';">
         <div class="swipeable arabic">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white" rel="external"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
-                </div>
-                <div class="col text-center text-white">
-                    الدرس ١
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="5.html" class="text-white text-nowrap"><small>التالي</small></a>
-                </div>
-            </div>
-        </header>
-        <main class="">
-            <div class="container-fluid ">
-                <div class="row mb-3">
-                    <div class="col px-0">
-                        <!-- image here -->
-                        <img src="../images/shutterstock_1080989546.jpg" alt="" class="img-fluid">
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>الدرس الاول</strong>
                     </div>
                 </div>
-            </div>
-            <nav class="nav justify-content-center timeline my-3">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
+            </header>
+        <main class="">
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1 navigation-page-count arabic-page-count">
+                        <p>٤/٧</p>
+                    </div>
+                    <div class="col-10 text-center indicator-set arabic-indicator-set">
+                        <a class="page-indicator page-indicator-active arabic-first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                        <a class="page-indicator"></a>
+                    </div>
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top arabic-close" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                       <h5 class="text-center">الوقاية</h5>
-                        <hr class="special mb-5">
-                        <p>في حين أن ارتداء ملابسك المفضلة بشكل جميل هو أحد الآثار الجانبية المهمة لفقدان الوزن، إلا أن أول وأهم فائدة لفقدان الوزن هي تجنب الأمراض المزمنة التي يمكن أن تؤثر على نوعية حياتك.</p>
-                        <p>إذا كنت تعاني من مقدمات داء السكري، فمن المرجح أن تصاب بما يلي:</p>   
-                        <ul>
-                            <li>داء السكري</li>
-                            <li>أمراض القلب</li>
-							<li>إرتفاع ضغط دم</li>
-                            <li>إرتفاع الدهون في الدم</li>
-                        </ul>
-                        <p>القيام بالتغييرات الآن سيجنبك المشاكل الصحية في المستقبل ، وسيؤخر أو يمنع هذه الأمراض ويحسن نوعية حياتك!</p>
+                        <div class="card shadow border-0 mb-3">
+                            <div class="card-body">
+                        <div class="row mb-3">
+                            <div class="col">
+                                <!-- image here -->
+                                <img src="../images/shutterstock_1080989546.jpg" alt="" class="img-fluid about-img">
+                            </div>
+                        </div>
+                       <h5 class="card-title">الوقاية</h5>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">في حين أن ارتداء ملابسك المفضلة بشكل جميل هو أحد الآثار الجانبية المهمة لفقدان الوزن، إلا أن أول وأهم فائدة لفقدان الوزن هي تجنب الأمراض المزمنة التي يمكن أن تؤثر على نوعية حياتك.</p>
+                        <p class="card-text mb-4 card-text-opacity">إذا كنت تعاني من مقدمات داء السكري، فمن المرجح أن تصاب بما يلي:</p>
+                                <div class="row my-3">
+                                    <div class="col-2 right-arrow-pointer mt-1">
+                                        <i class="fas fa-angle-left"></i>
+                                    </div>
+                                    <div class="col pl-0">
+                                        <p class="m-0 font-weight-bold">داء السكري</p>
+                                    </div>
+                                </div>
+                                <div class="row my-3">
+                                    <div class="col-2 right-arrow-pointer">
+                                        <i class="fas fa-angle-left"></i>
+                                    </div>
+                                    <div class="col pl-0">
+                                        <p class="m-0 font-weight-bold">أمراض القلب</p>
+                                    </div>
+                                </div>
+                                <div class="row my-3">
+                                    <div class="col-2 right-arrow-pointer">
+                                        <i class="fas fa-angle-left"></i>
+                                    </div>
+                                    <div class="col pl-0">
+                                        <p class="m-0 font-weight-bold">إرتفاع ضغط دم</p>
+                                    </div>
+                                </div>
+                                <div class="row my-3">
+                                    <div class="col-2 right-arrow-pointer">
+                                        <i class="fas fa-angle-left"></i>
+                                    </div>
+                                    <div class="col pl-0">
+                                        <p class="m-0 font-weight-bold">إرتفاع الدهون في الدم</p>
+                                    </div>
+                                </div>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">القيام بالتغييرات الآن سيجنبك المشاكل الصحية في المستقبل ، وسيؤخر أو يمنع هذه الأمراض ويحسن نوعية حياتك!</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col d-flex justify-content-start text-left px-1">
-                        <a href="3.html" class="btn btn-link text-info mb-3" rel="external">سابق</a>
+                <div class="row justify-content-around mt-3">
+                    <div class="col-5 text-left px-1">
+                        <a href="5.html" class="btn bottom-block-button mb-3" role="button">التالي</a>
                     </div>
-                    <div class="col d-flex justify-content-end px-1">
-                        <a href="5.html" class="btn btn-link text-info mb-3" rel="external">التالي</a>
+                    <div class="col-5 px-1">
+                        <a href="3.html" class="btn bottom-block-button mb-3" role="button">خلف</a>
                     </div>
                 </div>
             </div>
         </main>
+        </div>
     </body>
 </html>
