--- a/Non-Diabetic1/html/ar/6.html
+++ b/Non-Diabetic1/html/ar/6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,59 +15,79 @@
 </head>
     <body class="bg-light" style="text-align: right; font-family: 'Times';">
         <div class="swipeable arabic">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white" rel="external"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
-                </div>
-                <div class="col text-center text-white">
-                    الدرس ١
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="7.html" class="text-white text-nowrap"><small>التالي</small></a>
-                </div>
-            </div>
-        </header>
-        <main class="">
-            <div class="container-fluid ">
-                <div class="row mb-3">
-                    <div class="col px-0">
-                        <!-- image here -->
-                        <img src="../images/shutterstock_411972601.jpg" alt="" class="img-fluid">
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>الدرس الاول</strong>
                     </div>
                 </div>
-            </div>
-            <nav class="nav justify-content-center timeline my-3">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
+            </header>
+        <main class="">
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1 navigation-page-count arabic-page-count">
+                        <p>٦/٧</p>
+                    </div>
+                    <div class="col-10 text-center indicator-set arabic-indicator-set">
+                        <a class="page-indicator page-indicator-active arabic-first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator"></a>
+                    </div>
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top arabic-close" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <h5 class="text-center">الجيد في الأمر أن فقدان الوزن وممارسة </h5>
-                        <hr class="special mb-5">
-                        <p>التمارين الرياضية سيُساعدك على تقليل خطر الإصابة بالنوع الثاني من داء السكري إلى النصف!  لذلك سيُساعك البرنامج على على: </p>
-                        <ul>
-                            <li>فقدان 5 إلى 7 في المائة على الأقل من وزنك الأولي إذا كنت تعاني من فرط الوزن أو السمنة</li>
-                            <li>ممارسة النشاط البدني أسبوعياً لمدة 150 دقيقة على الأقل</li>  
-                        </ul>
-                          <p>إذا قٌمت باتباع برنامج دروبي، يمكننا مساعدتك على الحد من مخاطر إصابتك بالنوع الثاني من داء السكري، سواء أكنت تعاني من مقدمات داء السكري أم لا.</p>
+                        <div class="card shadow border-0 mb-3">
+                            <div class="card-body">
+                        <div class="row mb-3">
+                            <div class="col">
+                                <!-- image here -->
+                                <img src="../images/shutterstock_411972601.jpg" alt="" class="img-fluid about-img">
+                            </div>
+                        </div>
+                        <h5 class="card-title">الجيد في الأمر أن فقدان الوزن وممارسة </h5>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">التمارين الرياضية سيُساعدك على تقليل خطر الإصابة بالنوع الثاني من داء السكري إلى النصف!  لذلك سيُساعك البرنامج على على: </p>
+                                <div class="row my-3">
+                                    <div class="col-2 right-arrow-pointer mt-1">
+                                        <i class="fas fa-angle-left"></i>
+                                    </div>
+                                    <div class="col pl-0">
+                                        <p class="m-0 font-weight-bold">فقدان 5 إلى 7 في المائة على الأقل من وزنك الأولي إذا كنت تعاني من فرط الوزن أو السمنة</p>
+                                    </div>
+                                </div>
+                                <div class="row my-3">
+                                    <div class="col-2 right-arrow-pointer">
+                                        <i class="fas fa-angle-left"></i>
+                                    </div>
+                                    <div class="col pl-0">
+                                        <p class="m-0 font-weight-bold">ممارسة النشاط البدني أسبوعياً لمدة 150 دقيقة على الأقل</p>
+                                    </div>
+                                </div>
+                          <p class="card-text mb-4 mt-3 card-text-opacity">إذا قٌمت باتباع برنامج دروبي، يمكننا مساعدتك على الحد من مخاطر إصابتك بالنوع الثاني من داء السكري، سواء أكنت تعاني من مقدمات داء السكري أم لا.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col d-flex justify-content-start text-left px-1">
-                        <a href="5.html" class="btn btn-link text-info mb-3" rel="external">سابق</a>
+                <div class="row justify-content-around mt-3">
+                    <div class="col-5 text-left px-1">
+                        <a href="7.html" class="btn bottom-block-button mb-3" role="button">التالي</a>
                     </div>
-                    <div class="col d-flex justify-content-end px-1">
-                        <a href="7.html" class="btn btn-link text-info mb-3" rel="external">التالي</a>
+                    <div class="col-5 px-1">
+                        <a href="5.html" class="btn bottom-block-button mb-3" role="button">خلف</a>
                     </div>
                 </div>
             </div>
         </main>
+        </div>
     </body>
 </html>
