--- a/Non-Diabetic1/html/ar/quiz.html
+++ b/Non-Diabetic1/html/ar/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 13</title>
+    <title>Non Diabetic Lesson 1</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -17,7 +17,7 @@
 <header class="position-relative p-3">
     <div class="row align-items-center">
         <div class="col-12 text-center starter-page-header">
-            <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>Lesson 13</strong>
+            <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>Lesson 1</strong>
         </div>
     </div>
 </header>
@@ -37,10 +37,9 @@
                 <a class="page-indicator page-indicator-active"></a>
                 <a class="page-indicator page-indicator-active"></a>
                 <a class="page-indicator page-indicator-active"></a>
-                <a class="page-indicator page-indicator-active"></a>
             </div>
             <div class="col-1 navigation-page-count">
-                <p>8/8</p>
+                <p>7/7</p>
             </div>
         </div>
     </nav>
@@ -221,7 +220,7 @@
         </div>
         <div class="row justify-content-around mt-3">
             <div class="col-5 text-left px-1">
-                <a href="8.html" class="btn bottom-block-button mb-3" role="button">Back</a>
+                <a href="7.html" class="btn bottom-block-button mb-3" role="button">Back</a>
             </div>
             <div class="col-5 px-1">
                 <a href="index.html" class="btn bottom-block-button mb-3" role="button">Finish</a>
