Non Diabetic Complete Update

--- a/Non-Diabetic2/html/ar/4.html
+++ b/Non-Diabetic2/html/ar/4.html
@@ -47,12 +47,12 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <div class="card shadow border-0 mb-3">
+                        <div class="card shadow border-0 mb-3 info-only-card">
                             <div class="card-body">
-                        <h5 class="card-title">السعرات الحرارية والوزن</h5>
-                        <p class="card-text mb-4 mt-3 card-text-opacity">لكي تفقد الوزن، تحتاج إلى حرق سعرات حرارية أكثر من كميات الأكل التي تتناولها. </p>
-						<p class="card-text mb-4 card-text-opacity">السعرات الحرارية هي مقياس للطاقة. يحتاج جسم الإنسان إلى الطاقة لتشغيل وظائف الجسم ( ضربات القلب والتنفس والهضم والنوم ) بالإضافة الى دعم النشاط البدني مثل الجلوس والوقوف والجري والقيام بالأعمال المنزلية. تؤثر عوامل مثل الجنس والعمر والارتفاع على احتياجاتك اليومية من السعرات الحرارية ، وكذلك مستوى نشاطك البدني.</p>
-						<p class="card-text mb-4 card-text-opacity">معرفة كمية الطاقة التي نأخذها من خلال تناول الطعام ومقدار حصة الطعام التي نأكلها  مهم في انقاص الوزن. من المعروف أن  الأشخاص الذين يهتمون بمتابعة ما يأكلونه هم أكثر عرضة لفقدان الوزن والحفاظ عليه!</p>
+                        <h5 class="card-title pt-40">السعرات الحرارية والوزن</h5>
+                        <p class="card-text mb-4 pt-10 mt-3 card-text-opacity">لكي تفقد الوزن، تحتاج إلى حرق سعرات حرارية أكثر من كميات الأكل التي تتناولها. </p>
+						<p class="card-text mb-4 pt-4 card-text-opacity">السعرات الحرارية هي مقياس للطاقة. يحتاج جسم الإنسان إلى الطاقة لتشغيل وظائف الجسم ( ضربات القلب والتنفس والهضم والنوم ) بالإضافة الى دعم النشاط البدني مثل الجلوس والوقوف والجري والقيام بالأعمال المنزلية. تؤثر عوامل مثل الجنس والعمر والارتفاع على احتياجاتك اليومية من السعرات الحرارية ، وكذلك مستوى نشاطك البدني.</p>
+						<p class="card-text mb-4 pt-4 card-text-opacity">معرفة كمية الطاقة التي نأخذها من خلال تناول الطعام ومقدار حصة الطعام التي نأكلها  مهم في انقاص الوزن. من المعروف أن  الأشخاص الذين يهتمون بمتابعة ما يأكلونه هم أكثر عرضة لفقدان الوزن والحفاظ عليه!</p>
                             </div>
                         </div>
                    	 </div>
