--- a/Non-Diabetic3/html/ar/7.html
+++ b/Non-Diabetic3/html/ar/7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,69 +15,76 @@
 </head>
 <body class="bg-light" style="text-align: right; font-family: 'Times';">
      <div class="swipeable arabic">
-    <header class="shadow-sm position-relative bg-info p-3">
-        <div class="row align-items-center">
-            <div class="col d-flex justify-content-start">
-                <a href="index.html" class="text-white" rel="external"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
-            </div>
-            <div class="col text-center text-white">
-                   الدرس ٣
+         <header class="position-relative p-3">
+             <div class="row align-items-center">
+                 <div class="col-12 text-center starter-page-header">
+                     <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>الدرس الثالث</strong>
                  </div>
-            <div class="col d-flex justify-content-end">
-                <a href="8.html" class="text-white text-nowrap"><small>التالي</small></a>
-            </div>
-        </div>
-    </header>
+             </div>
+         </header>
     <main class="">
-        <div class="container-fluid ">
-            <div class="row mb-3">
-                <div class="col px-0">
-                    <!-- image here -->
-                    <img src="../images/shutterstock_721037374.jpg" alt="" class="img-fluid">
+        <nav class="my-2">
+            <div class="row justify-content-between navigation-header">
+                <div class="col-1 navigation-page-count arabic-page-count">
+                    <p>٧/١١</p>
+                </div>
+                <div class="col-10 text-center indicator-set arabic-indicator-set">
+                    <a class="page-indicator page-indicator-active arabic-first-component-indicator"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator"></a>
+                    <a class="page-indicator"></a>
+                    <a class="page-indicator"></a>
+                    <a class="page-indicator"></a>
+                </div>
+                <div class="col-1">
+                    <div class="col-12 d-flex">
+                        <a href="index.html" class="close-button-top arabic-close" role="button"><i class="fas fa-times-circle"></i></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <nav class="nav justify-content-center timeline my-3">
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
         </nav>
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <h5 class="text-center">تزويد جسمك بالألياف</h5>
-                    <hr class="special mb-5">
-                    <p class="dr-mb-35">وفي سياق الحديث عن موضوع الكربوهيدرات، يجب الإشارة إلى أن الألياف باعتبارها نوع من أنواع الكربوهيدرات ( توجد في الكربوهيدرات المعقدة !) والتي تتنقل عبر الجسم بدون هضم. دعنا الآن نتعرف على أهمية الألياف ولماذا تساعد في فقدان الوزن والوقاية من الأمراض مثل داء السكري من النوع الثاني. </p>
+                    <div class="card shadow border-0 mb-3">
+                        <div class="card-body">
+                    <div class="row mb-3">
+                        <div class="col">
+                            <!-- image here -->
+                            <img src="../images/shutterstock_721037374.jpg" alt="" class="img-fluid about-img">
+                        </div>
+                    </div>
+                    <h5 class="card-title">تزويد جسمك بالألياف</h5>
+                    <p class="card-text mb-4 mt-3 card-text-opacity">وفي سياق الحديث عن موضوع الكربوهيدرات، يجب الإشارة إلى أن الألياف باعتبارها نوع من أنواع الكربوهيدرات ( توجد في الكربوهيدرات المعقدة !) والتي تتنقل عبر الجسم بدون هضم. دعنا الآن نتعرف على أهمية الألياف ولماذا تساعد في فقدان الوزن والوقاية من الأمراض مثل داء السكري من النوع الثاني. </p>
                     <ul class="list-unstyled text-center">
                         <li>
                             <img src="../images/Image 3 intestine.svg" height="52">
-                            <p class="mt-2 dr-mb-35">تتميز الأطعمة الغنية بالألياف مثل الفواكه والخضروات بأنها ذات سعرات حرارية منخفضة وكذلك نسبة منخفضة من الدهون. ولأن هذه الأغذية غنية بالألياف فإنها تستغرق وقتاً أطول لتهضم لتسبب ارتفاعاً طفيفاً في مستوى سكر الدم.</p>
+                            <p class="mt-4 dr-mb-35">تتميز الأطعمة الغنية بالألياف مثل الفواكه والخضروات بأنها ذات سعرات حرارية منخفضة وكذلك نسبة منخفضة من الدهون. ولأن هذه الأغذية غنية بالألياف فإنها تستغرق وقتاً أطول لتهضم لتسبب ارتفاعاً طفيفاً في مستوى سكر الدم.</p>
                         </li>
                         <li>
                             <img src="../images/Image 4 vegetables.svg" height="52">
-                            <p class="mt-2 dr-mb-35">تستغرق العديد من الأطعمة الغنية بالألياف وقتًا أطول لمضغها وابتلاعها وبالتالي تتيح الوقت لجسمك ليدرك بأنك قد شبعت من الطعام. </p>
+                            <p class="mt-4 dr-mb-35">تستغرق العديد من الأطعمة الغنية بالألياف وقتًا أطول لمضغها وابتلاعها وبالتالي تتيح الوقت لجسمك ليدرك بأنك قد شبعت من الطعام. </p>
                         </li>
                         <li>
                             <img src="../images/Image 5 sponge.svg" height="52">
-                            <p class="mt-2 dr-mb-35">إن الألياف تمتص الماء مثل قطعة الاسفنج. وبسبب هذا الأمر، فإن الألياف في معدتك وأمعائك تخلق كتلة في جسمك فتجعلك تشعر بالشبع وعدم الحاجة إلى تناول المزيد من الطعام.</p>
+                            <p class="mt-4 dr-mb-35">إن الألياف تمتص الماء مثل قطعة الاسفنج. وبسبب هذا الأمر، فإن الألياف في معدتك وأمعائك تخلق كتلة في جسمك فتجعلك تشعر بالشبع وعدم الحاجة إلى تناول المزيد من الطعام.</p>
                         </li>
                     </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row mt-3">
-                <div class="col d-flex justify-content-start text-left px-1">
-                    <a href="6.html" class="btn btn-link text-info mb-3" rel="external">سابق</a>
+            <div class="row justify-content-around mt-3">
+                <div class="col-5 text-left px-1">
+                    <a href="8.html" class="btn bottom-block-button mb-3" role="button">التالي</a>
                 </div>
-                <div class="col d-flex justify-content-end px-1">
-                    <a href="8.html" class="btn btn-link text-info mb-3" rel="external">التالي</a>
+                <div class="col-5 px-1">
+                    <a href="6.html" class="btn bottom-block-button mb-3" role="button">خلف</a>
                 </div>
             </div>
         </div>
