--- a/Non-Diabetic3/html/en/10.html
+++ b/Non-Diabetic3/html/en/10.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,54 +15,59 @@
 </head>
     <body class="bg-light">
         <div class="swipeable">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white" rel="external"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
-                </div>
-                <div class="col text-center text-white">
-                    <strong>Lesson 3</strong>
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="11.html" class="text-white text-nowrap"><small>Next</small></a>
-                </div>
-            </div>
-        </header>
-        <main class="">
-            <div class="container-fluid ">
-                <div class="row mb-3">
-                    <div class="col px-0">
-                        <!-- image here -->
-                        <img src="../images/shutterstock_721037374.jpg" alt="" class="img-fluid">
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>Lesson 3</strong>
                     </div>
                 </div>
-            </div>
-            <nav class="nav justify-content-center timeline my-3">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
+            </header>
+        <main class="">
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-10 text-center indicator-set">
+                        <a class="page-indicator page-indicator-active first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator"></a>
+                    </div>
+                    <div class="col-1 navigation-page-count">
+                        <p>10/11</p>
+                    </div>
+                </div>
             </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <h5 class="text-center">Fat: Nourish and Repair</h5>
-                        <hr class="special mb-5">
-                        <p>Fat is an important part of your diet along with proteins and carbohydrates.</p>
-                        <p>Fats have the highest number of calories per gram than both carbohydrates and protein. As discussed in a previous lesson, weight loss requires you to burn more energy than you consume –so limiting your fat consumption is a great way to reduce the amount of calories you’re taking in.<br>
-						<p>Fat is needed by the body for providing energy, keeping your hair and skin healthy, helping your cells to function properly and for protecting your body and organs. Fat helps your body absorb certain nutrients and produce important hormones as well.</p>
-						<p>There are different types of fats. Some are healthy, others are not.</p>
+                        <div class="card shadow border-0 mb-3">
+                            <div class="card-body">
+                        <div class="row mb-3">
+                            <div class="col">
+                                <!-- image here -->
+                                <img src="../images/shutterstock_721037374.jpg" alt="" class="img-fluid about-img">
+                            </div>
+                        </div>
+                        <h5 class="card-title">Fat: Nourish and Repair</h5>
+                        <p class="card-text mb-4 mt-3 card-text-opacity">Fat is an important part of your diet along with proteins and carbohydrates.</p>
+                        <p class="card-text mb-4 card-text-opacity">Fats have the highest number of calories per gram than both carbohydrates and protein. As discussed in a previous lesson, weight loss requires you to burn more energy than you consume –so limiting your fat consumption is a great way to reduce the amount of calories you’re taking in.<br>
+						<p class="card-text mb-4 card-text-opacity">Fat is needed by the body for providing energy, keeping your hair and skin healthy, helping your cells to function properly and for protecting your body and organs. Fat helps your body absorb certain nutrients and produce important hormones as well.</p>
+						<p class="card-text mb-4 card-text-opacity">There are different types of fats. Some are healthy, others are not.</p>
                         <div class="bg-white shadow-sm mb-3 p-3">
                           <div class="row">
                             <div class="col-9">
-                              <p><small><strong>Saturated Fat</strong>  in excess can increase your risk for heart disease. They are found mostly in animal products, butter and dairy products.</small></p>
+                              <p class="card-text mb-4 mt-3 card-text-opacity"><small><strong>Saturated Fat</strong>  in excess can increase your risk for heart disease. They are found mostly in animal products, butter and dairy products.</small></p>
                             </div>
                             <div class="col-3 text-right">
                               <img src="../images/19 butter.svg" height="48" class="mw-100">
@@ -70,7 +75,7 @@
                           </div>
                           <div class="row">
                             <div class="col-9">
-                              <p><small><strong>Unsaturated Fat</strong>  can help improve your heart health. They are found in foods such as fish, nuts, avocados, sunflower oil and olive oil.</small></p>
+                              <p class="card-text mb-4 mt-3 card-text-opacity"><small><strong>Unsaturated Fat</strong>  can help improve your heart health. They are found in foods such as fish, nuts, avocados, sunflower oil and olive oil.</small></p>
                             </div>
                             <div class="col-3 text-right">
                                 <img src="../images/20 olive-oil.svg" height="48" class="mw-100">
@@ -78,31 +83,34 @@
                           </div>
                           <div class="row">
                             <div class="col-9">
-                              <p><small><strong>Trans fats</strong> increase your risk for heart disease. They are mostly found in processed foods.</small></p>
+                              <p class="card-text mb-4 mt-3 card-text-opacity"><small><strong>Trans fats</strong> increase your risk for heart disease. They are mostly found in processed foods.</small></p>
                             </div>
                             <div class="col-3 text-right">
                                 <img src="../images/21 cookies.svg" height="48" class="mw-100">
                             </div>
                           </div>
                         </div>
-						<p>Minimize your saturated fat intake and completely avoid trans fats as much as you can!</p>
+						<p class="card-text mb-4 mt-3 card-text-opacity">Minimize your saturated fat intake and completely avoid trans fats as much as you can!</p>
+                            </div>
+                        </div>
 						</div>
                     <div class="col-12 px-0">
-                        <div class="bg-info p-3 mb-3 text-white">
+                        <div class="bg-droobi-color p-3 mb-3 text-white">
                             <p class="m-0">Droobi Tip</p>
                             <small>Bake your foods, not fry! Fried foods are one of the biggest sources of saturated fat and regular consumption can cause weight gain. </small>
                         </div>
                     </div>
                 </div>
-                <div class="row mt-3">
-                    <div class="col d-flex justify-content-start text-left px-1">
-                        <a href="9.html" class="btn btn-link text-info mb-3" rel="external">Back</a>
+                <div class="row justify-content-around mt-3">
+                    <div class="col-5 text-left px-1">
+                        <a href="9.html" class="btn bottom-block-button mb-3" role="button">Back</a>
                     </div>
-                    <div class="col d-flex justify-content-end px-1">
-                        <a href="11.html" class="btn btn-link text-info mb-3" rel="external">Next</a>
+                    <div class="col-5 px-1">
+                        <a href="11.html" class="btn bottom-block-button mb-3" role="button">Next</a>
                     </div>
                 </div>
             </div>
         </main>
+        </div>
     </body>
 </html>
