--- a/Non-Diabetic3/html/en/5.html
+++ b/Non-Diabetic3/html/en/5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -15,78 +15,138 @@
 </head>
     <body class="bg-light">
         <div class="swipeable">
-    <header class="shadow-sm position-relative bg-info p-3">
-        <div class="row align-items-center">
-            <div class="col d-flex justify-content-start">
-                <a href="index.html" class="text-white" rel="external"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
-            </div>
-            <div class="col text-center text-white">
-                <strong>Lesson 3</strong>
-            </div>
-            <div class="col d-flex justify-content-end">
-                <a href="6.html" class="text-white text-nowrap"><small>Next</small></a>
-            </div>
-        </div>
-    </header>
+            <header class="position-relative p-3">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center starter-page-header">
+                        <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>Lesson 3</strong>
+                    </div>
+                </div>
+            </header>
     <main class="">
-        <div class="container-fluid ">
-            <div class="row mb-3">
-                <div class="col px-0">
-                    <!-- image here -->
-                    <!-- <div class="p-5 bg-secondary"></div> -->
+        <nav class="my-2">
+            <div class="row justify-content-between navigation-header">
+                <div class="col-1">
+                    <div class="col-12 d-flex">
+                        <a href="index.html" class="close-button-top" role="button"><i class="fas fa-times-circle"></i></a>
+                    </div>
+                </div>
+                <div class="col-10 text-center indicator-set">
+                    <a class="page-indicator page-indicator-active first-component-indicator"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator page-indicator-active"></a>
+                    <a class="page-indicator"></a>
+                    <a class="page-indicator"></a>
+                    <a class="page-indicator"></a>
+                    <a class="page-indicator"></a>
+                    <a class="page-indicator"></a>
+                    <a class="page-indicator"></a>
+                </div>
+                <div class="col-1 navigation-page-count">
+                    <p>5/11</p>
                 </div>
             </div>
-        </div>
-        <nav class="nav justify-content-center timeline my-3">
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-            <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
         </nav>
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <h5 class="text-center">Complex Carbs vs Simple Carbs</h5>
-                    <hr class="special mb-5">
-                    <p>While carbohydrates are an essential part of anyone’s meal plan, not all sources of carbohydrates are good for you. An easy way to think about it is that there are complex carbs and simple carbs. </p>
-					<p>Simple carbs are sugars in their simplest form. Some of these simple sugars occur naturally in milk, but most of them are added sugars. They are highly processed, stripped of all beneficial nutrients, and lack fiber which causes them to be digested quickly and cause a sharp rise in blood sugar levels over a short period of time. Later in the lesson you’ll learn about the major role fiber plays in helping with weight loss. </p>
-					<p>Do your best to avoid simple carbs, because they do not help in weight loss and don’t provide you with right nutrition to keep you full and energized. </p>
-					<p>You can find simple carbs in these very popular foods and drinks: </p>
-					<ul type="circle">
-						<li>Anything with added sugar</li>
-						<li>Soda</li>
-						<li>Baked treats (muffins, croissants, cakes)</li>
-						<li>Fruit juice concentrate</li>
-						<li>Breakfast cereals</li>
-					</ul>
-					<p>Complex carbs are more nutritious than simple carbs. They are minimally refined, so they still contain their vitamins and minerals. They also maintain their fiber content, which means they digest more slowly and keep you full for longer! </p>
-					<p>You can find complex carbs in</p>
-					<ul type="circle">
-						<li>Whole grains (quinoa, bulgur, whole-wheat bread)</li>
-						<li>Beans</li>
-						<li>Almost all vegetables</li>
-						<li>Fresh fruits</li>
-					</ul>
+                    <div class="card shadow border-0 mb-3">
+                        <div class="card-body">
+                    <h5 class="card-title">Complex Carbs vs Simple Carbs</h5>
+                    <p class="card-text mb-4 mt-3 card-text-opacity">While carbohydrates are an essential part of anyone’s meal plan, not all sources of carbohydrates are good for you. An easy way to think about it is that there are complex carbs and simple carbs. </p>
+					<p class="card-text mb-4 card-text-opacity">Simple carbs are sugars in their simplest form. Some of these simple sugars occur naturally in milk, but most of them are added sugars. They are highly processed, stripped of all beneficial nutrients, and lack fiber which causes them to be digested quickly and cause a sharp rise in blood sugar levels over a short period of time. Later in the lesson you’ll learn about the major role fiber plays in helping with weight loss. </p>
+					<p class="card-text mb-4 card-text-opacity">Do your best to avoid simple carbs, because they do not help in weight loss and don’t provide you with right nutrition to keep you full and energized. </p>
+					<p class="card-text mb-4 card-text-opacity">You can find simple carbs in these very popular foods and drinks: </p>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer mt-1">
+                                    <i class="fas fa-angle-right"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">Anything with added sugar</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-right"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">Soda</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-right"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">Baked treats (muffins, croissants, cakes)</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-right"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">Fruit juice concentrate</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-right"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">Breakfast cereals</p>
+                                </div>
+                            </div>
+					<p class="card-text mb-4 mt-3 card-text-opacity">Complex carbs are more nutritious than simple carbs. They are minimally refined, so they still contain their vitamins and minerals. They also maintain their fiber content, which means they digest more slowly and keep you full for longer! </p>
+					<p class="card-text mb-4 card-text-opacity">You can find complex carbs in</p>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer mt-1">
+                                    <i class="fas fa-angle-right"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">Whole grains (quinoa, bulgur, whole-wheat bread)</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-right"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">Beans</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-right"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">Almost all vegetables</p>
+                                </div>
+                            </div>
+                            <div class="row my-3">
+                                <div class="col-2 right-arrow-pointer">
+                                    <i class="fas fa-angle-right"></i>
+                                </div>
+                                <div class="col pl-0">
+                                    <p class="m-0 font-weight-bold">Fresh fruits</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 			</div>
             </div>
-            <div class="row mt-3">
-                <div class="col d-flex justify-content-start text-left px-1">
-                    <a href="4.html" class="btn btn-link text-info mb-3" rel="external">Back</a>
-                </div>
-                <div class="col d-flex justify-content-end px-1">
-                    <a href="6.html" class="btn btn-link text-info mb-3" rel="external">Next</a>
-                </div>
+        <div class="row justify-content-around mt-3">
+            <div class="col-5 text-left px-1">
+                <a href="4.html" class="btn bottom-block-button mb-3" role="button">Back</a>
+            </div>
+            <div class="col-5 px-1">
+                <a href="6.html" class="btn bottom-block-button mb-3" role="button">Next</a>
+            </div>
         </div>
-		</div>
     </main>
+        </div>
 </body>
 
 </html>
