--- a/Non-Diabetic3/html/en/index.html
+++ b/Non-Diabetic3/html/en/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pre Diabetic Lesson 1</title>
+    <title>Non Diabetic Lesson 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/88b2b303d8.js" crossorigin="anonymous"></script>
@@ -14,52 +14,56 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 </head>
     <body class="bg-light">
-        <header class="shadow-sm position-relative bg-info p-3">
-            <div class="row align-items-center">
-                <div class="col d-flex justify-content-start">
-                    <a href="index.html" class="text-white"><img src="../images/icon-cross.svg" width="16px" height="16px" alt="close"></a>
-                </div>
-                <div class="col text-center text-white">
-                    <strong>Lesson 3</strong>
-                </div>
-                <div class="col d-flex justify-content-end">
-                    <a href="2.html" class="text-white text-nowrap"><small>Start Lesson</small></a>
-                </div>
+    <header class="position-relative p-3">
+        <div class="row align-items-center">
+            <div class="col-12 text-center starter-page-header">
+                <img src="../images/lessons.PNG" alt="lessons icon" class="img-fluid lessons-icon" />&nbsp;&nbsp;&nbsp;<strong>Lesson 3</strong>
             </div>
-        </header>
+        </div>
+    </header>
         <main class="">
-            <nav class="nav justify-content-center timeline my-2">
-                <a href="#" class="nav-link active"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-                <a href="#" class="nav-link disabled"><i class="fa fa-circle"></i></a>
-            </nav>
-            <div class="container-fluid">
-                <div class="row mb-3">
-                    <div class="col">
-                        <!-- image here -->
-                        <img src="../images/shutterstock_556181722.svg" alt="" class="img-fluid">
+            <nav class="my-2">
+                <div class="row justify-content-between navigation-header">
+                    <div class="col-1">
+                        <div class="col-12 d-flex">
+                            <a href="index.html" class="close-button-top" role="button"><i class="fas fa-times-circle"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-10 text-center indicator-set">
+                        <a class="page-indicator page-indicator-active first-component-indicator"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                        <a class="page-indicator page-indicator-active"></a>
+                    </div>
+                    <div class="col-1 navigation-page-count">
+                        <p>11/11</p>
                     </div>
                 </div>
-            </div>
+            </nav>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
                         <div class="card shadow border-0 mb-3">
                             <div class="card-body">
-                                <h5 class="card-title text-center">The Basics of Healthy Eating</h5>
-                                <p class="card-text mb-4">One of the keys to weight loss is having well-balanced and nutritious meals. </p>
-                                <p class="card-text mb-4">This week’s lesson will cover:</p>
+                                <div class="row mb-3">
+                                    <div class="col">
+                                        <!-- image here -->
+                                        <img src="../images/shutterstock_556181722.svg" alt="" class="img-fluid about-img">
+                                    </div>
+                                </div>
+                                <h5 class="card-title">The Basics of Healthy Eating</h5>
+                                <p class="card-text mb-4 mt-3 card-text-opacity">One of the keys to weight loss is having well-balanced and nutritious meals. </p>
+                                <p class="card-text mb-4 card-text-opacity">This week’s lesson will cover:</p>
                                 <div class="row my-3">
-                                    <div class="col-2">
-                                        <img src="../images/1 2 3 right-chevron.svg" height="20">
+                                    <div class="col-2 right-arrow-pointer mt-1">
+                                        <i class="fas fa-angle-right"></i>
                                     </div>
                                     <div class="col pl-0">
                                         <p class="m-0 font-weight-bold">The importance of eating healthy</p>
@@ -67,8 +71,8 @@
                                     </div>
                                 </div>
                                 <div class="row my-3">
-                                    <div class="col-2">
-                                        <img src="../images/1 2 3 right-chevron.svg" height="20">
+                                    <div class="col-2 right-arrow-pointer">
+                                        <i class="fas fa-angle-right"></i>
                                     </div>
                                     <div class="col pl-0">
                                         <p class="m-0 font-weight-bold">The building blocks of nutrition</p>
@@ -76,8 +80,8 @@
                                     </div>
                                 </div>
                                 <div class="row my-3">
-                                    <div class="col-2">
-                                        <img src="../images/1 2 3 right-chevron.svg" height="20">
+                                    <div class="col-2 right-arrow-pointer">
+                                        <i class="fas fa-angle-right"></i>
                                     </div>
                                     <div class="col pl-0">
                                         <p class="m-0 font-weight-bold">How to create a healthy plate</p>
@@ -86,7 +90,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="2.html" class="btn btn-block btn-link text-info mb-3">Start Lesson</a>
+                        <a href="2.html" class="btn bottom-block-button mb-3">Start Lesson</a>
                     </div>
                 </div>
             </div>
